Landing page done

--- a/Frontend/src/Components/Footer.css
+++ b/Frontend/src/Components/Footer.css
@@ -1,14 +1,11 @@
-.footer{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr ;
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: rgb(151, 144, 144);
-    /* position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    top: 120vh; */
+    padding: 10px 20px;
 }
 
-.section ul li{
+.section ul li {
     display: block;
 }
