--- a/Frontend/src/Components/landingpage.css
+++ b/Frontend/src/Components/landingpage.css
@@ -159,6 +159,14 @@
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
+
+  .dropdown-menu li a{
+    color: white;
+  }
+
+  .dropdown-menu li a:hover{
+    color: #0f0f0f;
+  }
   
   .dropdown-menu li {
     color: black;
