--- a/Frontend/src/Components/register.css
+++ b/Frontend/src/Components/register.css
@@ -1,22 +1,8 @@
-/* nav .navbtn {
-    border: 1px solid deeppink;
-    padding: 4px 20px;
-    margin-right: 5%;
-    border-radius: 15px;
-    background-color: deeppink;
-    color: #000;
-} */
-
-/* nav .navbtn:hover {
-    color: white;
-    background-color: #12ac9f;
-} */
-
 main {
     /* position: relative; */
     width: 100%;
-    height: 220vh;
-    background: linear-gradient(180deg, #211c7e, #12ac9f);
+    height: 260vh;
+    background: linear-gradient(180deg, #fff, #999797);
     overflow: hidden;
     display: flex;
     justify-content: center;
