--- a/Frontend/src/Components/login.css
+++ b/Frontend/src/Components/login.css
@@ -30,19 +30,6 @@ nav .logo{
     animation: spin .5s linear infinite;
 }
 
-/* nav .navbtn{
-    border: 1px solid deeppink;
-    padding: 4px 20px;
-    margin-right: 5%;
-    border-radius: 15px;
-    background-color: deeppink;
-    color: #000;
-}
-
-nav .navbtn:hover{
-    color: white;
-    background-color: #12ac9f;
-} */
 
 .log-main {
     position: absolute;
@@ -66,21 +53,6 @@ nav .navbtn:hover{
     align-items: center;
     border: .2px solid #fff;
 }
-
-/* .login-imagecontainer {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    background-image: url(/login.jpg);
-    background-size: cover;
-    background-position: center;
-    color: #ffffff;
-    text-align: center;
-}
-
-.overlay {
-    padding: 60% 5%;
-} */
 
 .form h2{
     color: black;
@@ -157,4 +129,27 @@ a {
 
 .signin {
     margin-left: 5px;
+}
+
+@media screen and (max-width:500px) {
+
+
+    .login-formstyle {
+        padding: 20px 40px;
+    
+    }
+
+     input {
+        border: none;
+        background: transparent;
+        border-bottom: 1px solid;
+        margin-top: 5px;
+        width: 60%;
+        height: 5vh;
+        font-size: 1.3rem;
+    }
+    
+     input::placeholder {
+        font-size: 1rem;
+    }
 }
