--- a/Frontend/src/Components/Feed.css
+++ b/Frontend/src/Components/Feed.css
@@ -39,4 +39,13 @@
     .feed {
         grid-template-columns: repeat(2, minmax(200px, 1fr));
     }
+
+    .back-img img{
+        position: absolute;
+        top: 30%;
+        left: 28%;
+        width: 250px;
+        z-index: -2;
+    }
+    
 }
