--- a/Frontend/src/Components/Profile.css
+++ b/Frontend/src/Components/Profile.css
@@ -229,3 +229,68 @@
     transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
 }
+
+@media (max-width:500px){
+  .profile-field img {
+    max-width: 100%;
+    max-height: 120px;
+  }
+
+  .flex {
+    display: block;
+  }
+
+  .profile-photo img {
+    border: solid black;
+    border-radius: 50%;
+    position: relative;
+    top: -50px;
+  }
+
+  .profile-details {
+    display: block;
+  }
+  
+  .bg-image img {
+    width: 100%;
+    height: 150px;
+  }
+
+  .username p{
+    position: relative;
+    top: -75px;
+    left: -18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+
+  .profile-docs-section h3 {
+    font-size: 1.5rem;
+  }
+  
+  .profile-docs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding: 0px 10px;
+  }
+  
+  .profile-docs img {
+    width: 80px;
+  }
+
+  .profile-field label{
+    font-size: 1rem;
+  }
+
+  .profile-buttons {
+    margin-top: 10px;
+  }
+
+  .edit-button{
+    padding: 10px 40px;
+  }
+}
