--- a/Frontend/src/Components/PostByCompany.css
+++ b/Frontend/src/Components/PostByCompany.css
@@ -113,7 +113,7 @@
 }
 
 .save-btn{
-    padding: 10px 10px;
+    padding: 10px 100px;
 }
 
 .flex{
@@ -157,4 +157,8 @@
 .attach-form input{
     width: 1rem;
     padding: 10px;
+}
+
+.flex1{
+    display: flex;
 }
