--- a/Frontend/src/Components/AdminPostCreation.css
+++ b/Frontend/src/Components/AdminPostCreation.css
@@ -115,6 +115,10 @@ a {
   padding: 10px 20px;
 }
 
+.add-post{
+  padding: 10px 20px;
+}
+
 .input-check-box{
   display: flex;
   gap: 8px;
@@ -126,4 +130,14 @@ a {
 .input-check-box label{
   border: 0.1px solid black;
   padding: 5px;
+}
+
+@media (max-width: 576px){
+  .add-field{
+    padding: 10px 30px;
+  }
+
+  .add-post{
+    padding: 10px 30px;
+  }
 }
